Closed Bug 41953 Opened 24 years ago Closed 24 years ago

form element can't be referenced as array element

Categories

(Core :: DOM: Core & HTML, defect, P3)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: sean, Assigned: jst)

Details

(Keywords: testcase, Whiteboard: [nsbeta2+][HAVE FIX])

Attachments

(1 file)

The use of the following expression does not work anymore in mozilla.  It 
stopped working during this week:

document ['listboxNavForm']['listboxNav_previous'];


Example context:

<form name="listboxNavForm">
    <a href="javascript://" onmouseover="arrowOver(-1); return true">
    <img src="arrow.gif" name="listboxNav_previous" width=22 height=19 hspace=5 
alt="previous" border=0 hspace=0 vspace=5></a>
</form>

<script language=javascript>
function arrowOver (_direction)
{
	var _arrowStr = (_direction == -1) ? 'previous' : 'next';
	alert(document ['listboxNavForm']);   // ok
	alert(document ['listboxNavForm']['listboxNav_' + _arrowStr]); // bad
	alert(document ['listboxNavForm']['listboxNav_' + 'previous']); // bad
	alert(document ['listboxNavForm']['listboxNav_previous']); // bad
}
</script>
added 4xp and testcase keywords
Keywords: 4xp, testcase
nominating nsbeta2.
Experienced this with a build after pulling from the tip 6/7 around noon.
Keywords: nsbeta2
We think may be a DOM, not javascript problem...reassignnig to jst to check out. 
 Johnny...what do ya think?
Assignee: rogerl → jst
Whiteboard: [NEED INFO]
Mine mine mine, I broke it, I'll fix it.
Status: NEW → ASSIGNED
Component: Javascript Engine → DOM Level 0
Putting on [nsbeta2+] radar for beta2 fix.  Fix away my friend!
Whiteboard: [NEED INFO] → [nsbeta2+]
I have a fix for this in my tree but I'll do some more testing before checking
in...
OS: Windows 2000 → All
Hardware: PC → All
Whiteboard: [nsbeta2+] → [nsbeta2+][HAVE FIX]
Target Milestone: --- → M18
I just checked in the fix for this, marking FIXED.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
verify fixed - thanks!

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: