Fixing nsbeta2+ bug 41953, form element regressions. r=vidur@netscape.com