content/html/content/src/nsHTMLLabelElement.cpp
@@ -191,10 +191,7 @@ nsHTMLLabelElement::nsHTMLLabelElement(nsINodeInfo *aNodeInfo)
 nsHTMLLabelElement::~nsHTMLLabelElement()
 {
   // Null out form's pointer to us - no ref counting here!
-  if (mForm) {
-    mForm->RemoveElement(this);
-    mForm = nsnull;
-  }
+  SetForm(nsnull);
 }
 
 // nsISupports 
@@ -268,8 +265,19 @@ nsHTMLLabelElement::SetForm(nsIDOMHTMLFormElement* aForm)
   nsresult result = QueryInterface(kIFormControlIID, getter_AddRefs(formControl));
   if (NS_FAILED(result)) formControl = nsnull;
 
-  if (mForm && formControl)
+  nsAutoString nameVal, idVal;
+  mInner.GetAttribute(kNameSpaceID_None, nsHTMLAtoms::name, nameVal);
+  mInner.GetAttribute(kNameSpaceID_None, nsHTMLAtoms::id, idVal);
+
+  if (mForm && formControl) {
     mForm->RemoveElement(formControl);
+
+    if (nameVal.Length())
+      mForm->RemoveElementFromTable(this, nameVal);
+
+    if (idVal.Length())
+      mForm->RemoveElementFromTable(this, idVal);
+  }
 
   if (aForm) {
     nsCOMPtr<nsIForm> theForm = do_QueryInterface(aForm, &result);
@@ -277,6 +285,12 @@ nsHTMLLabelElement::SetForm(nsIDOMHTMLFormElement* aForm)
     if ((NS_OK == result) && theForm) {
       if (formControl) {
         theForm->AddElement(formControl);
+
+        if (nameVal.Length())
+          theForm->AddElementToTable(this, nameVal);
+
+        if (idVal.Length())
+          theForm->AddElementToTable(this, idVal);
       }
     }
   } else {
