content/html/content/src/nsHTMLLegendElement.cpp
@@ -112,10 +112,7 @@ nsHTMLLegendElement::nsHTMLLegendElement(nsINodeInfo *aNodeInfo)
 nsHTMLLegendElement::~nsHTMLLegendElement()
 {
   // Null out form's pointer to us - no ref counting here!
-  if (mForm) {
-    mForm->RemoveElement(this);
-    mForm = nsnull;
-  }
+  SetForm(nsnull);
 }
 
 NS_IMPL_ADDREF(nsHTMLLegendElement)
@@ -187,8 +184,19 @@ nsHTMLLegendElement::SetForm(nsIDOMHTMLFormElement* aForm)
   nsresult result = QueryInterface(NS_GET_IID(nsIFormControl), getter_AddRefs(formControl));
   if (NS_FAILED(result)) formControl = nsnull;
 
-  if (mForm && formControl)
+  nsAutoString nameVal, idVal;
+  mInner.GetAttribute(kNameSpaceID_None, nsHTMLAtoms::name, nameVal);
+  mInner.GetAttribute(kNameSpaceID_None, nsHTMLAtoms::id, idVal);
+
+  if (mForm && formControl) {
     mForm->RemoveElement(formControl);
+
+    if (nameVal.Length())
+      mForm->RemoveElementFromTable(this, nameVal);
+
+    if (idVal.Length())
+      mForm->RemoveElementFromTable(this, idVal);
+  }
 
   if (aForm) {
     nsCOMPtr<nsIForm> theForm = do_QueryInterface(aForm, &result);
@@ -196,6 +204,12 @@ nsHTMLLegendElement::SetForm(nsIDOMHTMLFormElement* aForm)
     if ((NS_OK == result) && theForm) {
       if (formControl) {
         theForm->AddElement(formControl);
+
+        if (nameVal.Length())
+          theForm->AddElementToTable(this, nameVal);
+
+        if (idVal.Length())
+          theForm->AddElementToTable(this, idVal);
       }
     }
   } else {
